--- a/css/main.css
+++ b/css/main.css
@@ -1,137 +1,195 @@
-body {
-   background-color: #844bad;
+html {
+  height: 100%;
 }
 
+body {
+  background-color: #844bad;
+}
+
+.container {
+  margin: 0;
+  padding: 0;
+}
 /* Fontes - Texto*/
 
-.font-xs{ font-size: 1rem !important;}
-.font-x1{ font-size: 1.5rem !important}
-.font-x2{ font-size: 2.5rem !important}
-.font-x3{ font-size: 5rem !important}
+.font-xs {
+  font-size: 1rem !important;
+}
+.font-x1 {
+  font-size: 1.5rem !important;
+}
+.font-x2 {
+  font-size: 2.5rem !important;
+}
+.font-x3 {
+  font-size: 5rem !important;
+}
 
-.m-1{margin: 1rem;}
-.m-2{margin: 2rem;}
+.m-1 {
+  margin: 1rem;
+}
+.m-2 {
+  margin: 2rem;
+}
 
-.my-1{margin-top: 1rem; margin-bottom: 1rem;}
-.my-2{margin-top: 2rem; margin-bottom: 2rem;}
-.my-3{margin-top: 3rem; margin-bottom: 3rem;}
-.my-4{margin-top: 4rem; margin-bottom: 4rem;}
+.my-1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.my-2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.my-3 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.my-4 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
 
-.mx-1{margin-left: 1rem;margin-right: 1rem;}
-.mx-2{margin-left: 2rem;margin-right: 2rem;}
-.mx-3{margin-left: 3rem;margin-right: 3rem;}
-.mx-4{margin-left: 4rem;margin-right: 4rem;}
+.mx-1 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.mx-2 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+.mx-3 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+.mx-4 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
 
-.p-1{padding: 1rem;}
-.p-2{padding: 2rem;}
+.p-1 {
+  padding: 1rem;
+}
+.p-2 {
+  padding: 2rem;
+}
 
-.text-center{text-align: center;}
-.text-right{text-align: right;}
-.text-left{text-align: left;}
-.text-uppercase{text-transform: uppercase;}
-.text-bold{font-weight: 600;}
-.text-justify{text-align: justify;}
+.text-center {
+  text-align: center;
+}
+.text-right {
+  text-align: right;
+}
+.text-left {
+  text-align: left;
+}
+.text-uppercase {
+  text-transform: uppercase;
+}
+.text-bold {
+  font-weight: 600;
+}
+.text-justify {
+  text-align: justify;
+}
 
-.fl_left{float: left;}
-.fl_right{float: right;}
+.fl_left {
+  float: left;
+}
+.fl_right {
+  float: right;
+}
 
 /* MENU*/
 
-
-
 .topnav {
-    background-color:#6b3194 ;
-    
-    overflow: hidden;
+  background-color: #6b3194;
+
+  overflow: hidden;
+}
+
+.topnav a {
+  text-transform: uppercase;
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  width: 300px;
+}
+
+.topnav a:hover {
+  background-color: #844bad;
+  color: white;
+}
+
+.topnav a.active {
+  background-color: #6b3194;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
   }
-  
-  .topnav a {
-      text-transform: uppercase;
-    float: left;
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
     display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    width: 300px;
+    text-align: left;
   }
-  
- 
-  .topnav a:hover {
-    background-color: #844bad;
-    color: white;
-  }
-  
-  
-  .topnav a.active {
-    background-color:#6b3194;
-    color: white;
-  }
-  
-  
-  .topnav .icon {
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
     display: none;
   }
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
+}
+#comprar-ingresso {
+  width: 628px;
+  height: 96px;
+  border-radius: 80px;
+  background-color: #6b3194;
+}
+.section1 {
+  background-image: url(../img/1_unimatch.svg);
+  background-size: contain;
+}
 
-  @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
+.section2 {
+  background-image: url(../img/2_sobre.svg);
+  background-size: contain;
+}
+
+.section3 {
+  background-image: url(../img/3_atracoes.svg);
+  background-size: contain;
+}
+.section4 {
+  background-image: url(../img/4_apoio.svg);
+  background-size: contain;
+}
+
+ul {
+  a {
+    text-decoration: none;
   }
-
-
-.section1{
-    width: 1440px;
-    height: 953px;
-    background-image: url(../img/section1.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: inherit;
-}
-
-.section2{
-    width: 1440px;
-    height: 928px;
-    background-image: url(../img/section2.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: inherit;
-
-}
-  
-.section3{
-    width: 1440px;
-    height: 862px;
-    background-image: url(../img/section3.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: inherit;
-    
-
-}
-.section4{
-    align-self: auto;
-    width: 1440px;
-    height: 953px;
-    background-image: url(../img/section4.png);
-    background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: inherit;
-
+  a::after {
+    text-decoration: none;
+  }
+  a:hover {
+    text-emphasis: none;
+  }
 }
