--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+
 body {
    background-color: #844bad;
 }
@@ -97,41 +98,76 @@ body {
 
 
 .section1{
-    width: 1440px;
+    width: 1507px;
     height: 953px;
     background-image: url(../img/section1.png);
     background-repeat: no-repeat;
-    background-size: 100%;
-    background-position: inherit;
+    background-size: 1507px 953px;
+    
+  
+   
+   
+  
+   
 }
 
 .section2{
-    width: 1440px;
+    width: 1507px;
     height: 928px;
     background-image: url(../img/section2.png);
     background-repeat: no-repeat;
-    background-size: 100%;
     background-position: inherit;
+    background-size: 1507px 928px;
+    
+    
+    
 
 }
-  
+ 
 .section3{
-    width: 1440px;
+    width: 1507px;
     height: 862px;
     background-image: url(../img/section3.png);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 1507px 863px;
     background-position: inherit;
     
 
 }
 .section4{
     align-self: auto;
-    width: 1440px;
+    width: 1507px;
     height: 953px;
     background-image: url(../img/section4.png);
     background-repeat: no-repeat;
-    background-size: 100%;
+    background-size: 1507px 953px;
+  
     background-position: inherit;
 
+}
+
+.full{
+  position:absolute;
+  width:100%;
+  height:100%;
+  
+}
+
+.logo{
+  position: absolute;
+	left: 29%;
+  top: 3%;
+  
+}
+.til{
+width: 428px;
+height: 65px;
+color: #6b3194;
+font-family: "Alfa Slab One";
+font-size: 46px;
+font-weight: 400;
+text-transform: uppercase;
+position: absolute;
+left: 34%;
+top: 97%
 }
