--- a/css/main.css
+++ b/css/main.css
@@ -1,173 +1,236 @@
+@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap');
 
+html {
+  font-size: 16px;
+}
 body {
-   background-color: #844bad;
+  background-color: #844bad;
+}
+
+/* NavBar */
+a,
+a::after,
+a:hover {
+  text-decoration: none;
+}
+
+#navbar {
+  width: 100%;
+  background-color: #6b3194;
+  font-family: 'Alfa Slab One', sans-serif;
+  font-size: 1.625rem;
+  font-weight: 400;
+  letter-spacing: 2.21px;
+  text-transform: uppercase;
+}
+.navbar a {
+  color: #ffffff;
 }
 
 /* Fontes - Texto*/
 
-.font-xs{ font-size: 1rem !important;}
-.font-x1{ font-size: 1.5rem !important}
-.font-x2{ font-size: 2.5rem !important}
-.font-x3{ font-size: 5rem !important}
+.font-xs {
+  font-size: 1rem !important;
+}
+.font-x1 {
+  font-size: 1.5rem !important;
+}
+.font-x2 {
+  font-size: 2.5rem !important;
+}
+.font-x3 {
+  font-size: 5rem !important;
+}
 
-.m-1{margin: 1rem;}
-.m-2{margin: 2rem;}
+.m-1 {
+  margin: 1rem;
+}
+.m-2 {
+  margin: 2rem;
+}
 
-.my-1{margin-top: 1rem; margin-bottom: 1rem;}
-.my-2{margin-top: 2rem; margin-bottom: 2rem;}
-.my-3{margin-top: 3rem; margin-bottom: 3rem;}
-.my-4{margin-top: 4rem; margin-bottom: 4rem;}
+.my-1 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.my-2 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.my-3 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.my-4 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
 
-.mx-1{margin-left: 1rem;margin-right: 1rem;}
-.mx-2{margin-left: 2rem;margin-right: 2rem;}
-.mx-3{margin-left: 3rem;margin-right: 3rem;}
-.mx-4{margin-left: 4rem;margin-right: 4rem;}
+.mx-1 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.mx-2 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+.mx-3 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+.mx-4 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
 
-.p-1{padding: 1rem;}
-.p-2{padding: 2rem;}
+.p-1 {
+  padding: 1rem;
+}
+.p-2 {
+  padding: 2rem;
+}
 
-.text-center{text-align: center;}
-.text-right{text-align: right;}
-.text-left{text-align: left;}
-.text-uppercase{text-transform: uppercase;}
-.text-bold{font-weight: 600;}
-.text-justify{text-align: justify;}
+.text-center {
+  text-align: center;
+}
+.text-right {
+  text-align: right;
+}
+.text-left {
+  text-align: left;
+}
+.text-uppercase {
+  text-transform: uppercase;
+}
+.text-bold {
+  font-weight: 600;
+}
+.text-justify {
+  text-align: justify;
+}
 
-.fl_left{float: left;}
-.fl_right{float: right;}
+.fl_left {
+  float: left;
+}
+.fl_right {
+  float: right;
+}
 
 /* MENU*/
 
-
-
 .topnav {
-    background-color:#6b3194 ;
-    
-    overflow: hidden;
+  background-color: #6b3194;
+
+  overflow: hidden;
+}
+
+.topnav a {
+  text-transform: uppercase;
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  width: 300px;
+}
+
+.topnav a:hover {
+  background-color: #844bad;
+  color: white;
+}
+
+.topnav a.active {
+  background-color: #6b3194;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+@media screen and (max-width: 600px) {
+  .topnav.responsive {
+    position: relative;
   }
-  
-  .topnav a {
-      text-transform: uppercase;
-    float: left;
+  .topnav.responsive a.icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
     display: block;
-    color: #f2f2f2;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: 17px;
-    width: 300px;
+    text-align: left;
   }
-  
- 
-  .topnav a:hover {
-    background-color: #844bad;
-    color: white;
-  }
-  
-  
-  .topnav a.active {
-    background-color:#6b3194;
-    color: white;
-  }
-  
-  
-  .topnav .icon {
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {
     display: none;
   }
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive a.icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
+  .topnav a.icon {
+    float: right;
+    display: block;
   }
-
-  @media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      display: block;
-    }
-  }
-
-
-.section1{
-    width: 1507px;
-    height: 953px;
-    background-image: url(../img/section1.png);
-    background-repeat: no-repeat;
-    background-size: 1507px 953px;
-    
-  
-   
-   
-  
-   
 }
 
-.section2{
-    width: 1507px;
-    height: 928px;
-    background-image: url(../img/section2.png);
-    background-repeat: no-repeat;
-    background-position: inherit;
-    background-size: 1507px 928px;
-    
-    
-    
-
-}
- 
-.section3{
-    width: 1507px;
-    height: 862px;
-    background-image: url(../img/section3.png);
-    background-repeat: no-repeat;
-    background-size: 1507px 863px;
-    background-position: inherit;
-    
-
-}
-.section4{
-    align-self: auto;
-    width: 1507px;
-    height: 953px;
-    background-image: url(../img/section4.png);
-    background-repeat: no-repeat;
-    background-size: 1507px 953px;
-  
-    background-position: inherit;
-
+.section1 {
+  width: 1507px;
+  height: 953px;
+  background-image: url(../img/section1.png);
+  background-repeat: no-repeat;
+  background-size: 1507px 953px;
 }
 
-.full{
-  position:absolute;
-  width:100%;
-  height:100%;
-  
+.section2 {
+  width: 1507px;
+  height: 928px;
+  background-image: url(../img/section2.png);
+  background-repeat: no-repeat;
+  background-position: inherit;
+  background-size: 1507px 928px;
 }
 
-.logo{
+.section3 {
+  width: 1507px;
+  height: 862px;
+  background-image: url(../img/section3.png);
+  background-repeat: no-repeat;
+  background-size: 1507px 863px;
+  background-position: inherit;
+}
+.section4 {
+  align-self: auto;
+  width: 1507px;
+  height: 953px;
+  background-image: url(../img/section4.png);
+  background-repeat: no-repeat;
+  background-size: 1507px 953px;
+
+  background-position: inherit;
+}
+
+.full {
   position: absolute;
-	left: 29%;
-  top: 3%;
-  
+  width: 100%;
+  height: 100%;
 }
-.til{
-width: 428px;
-height: 65px;
-color: #6b3194;
-font-family: "Alfa Slab One";
-font-size: 46px;
-font-weight: 400;
-text-transform: uppercase;
-position: absolute;
-left: 34%;
-top: 97%
+
+.logo {
+  position: absolute;
+  left: 29%;
+  top: 3%;
+}
+.til {
+  width: 428px;
+  height: 65px;
+  color: #6b3194;
+  font-family: 'Alfa Slab One';
+  font-size: 46px;
+  font-weight: 400;
+  text-transform: uppercase;
+  position: absolute;
+  left: 34%;
+  top: 97%;
 }
