--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,7 @@
 
 html {
   font-size: 16px;
+  scroll-behavior: smooth;
 }
 body {
   background-color: #844bad;
@@ -11,7 +12,7 @@ body {
 a,
 a::after,
 a:hover {
-  text-decoration: none;
+  text-decoration: none !important;
 }
 
 #navbar {
@@ -25,6 +26,11 @@ a:hover {
 }
 .navbar a {
   color: #ffffff;
+}
+.navbar a:hover {
+  color: #ffffff;
+  background-color: #844bad;
+  border-radius: 5rem;
 }
 
 /* Fontes - Texto*/
