--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@
 html {
   font-size: 16px;
   scroll-behavior: smooth;
+  font-family: 'Alfa Slab One', sans-serif;
 }
 body {
   background-color: #844bad;
