--- a/css/main.css
+++ b/css/main.css
@@ -265,3 +265,58 @@ button{
   letter-spacing: 3.06px;
   text-transform: uppercase;
 }
+
+.sobre-til {
+  width: 792px;
+  height: 72px;
+  text-shadow: 4px 4px 0 #54197e;
+  color: #ffffff;
+  font-family: "Alfa Slab One";
+  font-size: 56px;
+  font-weight: 400;
+  letter-spacing: 4.76px;
+  text-transform: uppercase;
+  text-align: center;
+  position: relative;
+  left: 26%;
+  top: 8%;
+}
+
+.sobre-text{
+  width: 745px;
+height: 178px;
+color: #ffffff;
+font-family: "Open Sans";
+font-size: 22px;
+font-weight: 400;
+line-height: 33.81px;
+position: relative;
+left: 27%;
+top: 10%
+}
+.sobre-til-2{
+  width: 778px;
+height: 89px;
+text-shadow: 3px 3px 0 #54197e;
+color: #ffffff;
+font-family: "Alfa Slab One";
+font-size: 30px;
+font-weight: 400;
+letter-spacing: 2.55px;
+text-transform: uppercase;
+position: relative;
+  left: 26%;
+  top: 12%;
+}
+
+.social-icon{
+  display: inline-block;
+  position: relative;
+  left: 40%;
+  top: 100%;
+}
+
+.social-icon>figure{
+  
+  display: inline-block
+}
