--- a/css/main.css
+++ b/css/main.css
@@ -256,7 +256,7 @@ a:hover {
     -moz-border-radius: 80px;
     -ms-border-radius: 80px;
     -o-border-radius: 80px;
-    box-shadow: 0 20px 80px 20px #6b3194;
+    box-shadow: 0 20px 80px 20px #6b319469;
 }
 
 
