--- a/css/main.css
+++ b/css/main.css
@@ -1,355 +1,248 @@
-@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One|Open+Sans&display=swap');
 
-html {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html,
+body {
   font-size: 16px;
   scroll-behavior: smooth;
-  font-family: 'Alfa Slab One', sans-serif;
-}
-body {
-  background-color: #844bad;
+  font-family: 'Alfa Slab One', cursive;
 }
 
-/* NavBar */
-a,
-a::after,
-a:hover {
-  text-decoration: none !important;
+@media only screen and (max-width: 768px) {
+  html,
+  body {
+    font-size: 14px;
+  }
 }
 
-#navbar {
-  width: 100%;
-  background-color: #6b3194;
-  font-family: 'Alfa Slab One', sans-serif;
-  font-size: 1.625rem;
+@media only screen and (max-width: 425px) {
+  html,
+  body {
+    font-size: 10px;
+  }
+}
+nav a,
+a:hover,
+a:visited {
+  color: #fff;
   font-weight: 400;
-  letter-spacing: 2.21px;
-  text-transform: uppercase;
-}
-.navbar a {
-  color: #ffffff;
-}
-.navbar a:hover {
-  color: #ffffff;
-  background-color: #844bad;
-}
-
-/* Fontes - Texto*/
-
-.font-xs {
-  font-size: 1rem !important;
-}
-.font-x1 {
-  font-size: 1.5rem !important;
-}
-.font-x2 {
-  font-size: 2.5rem !important;
-}
-.font-x3 {
-  font-size: 5rem !important;
-}
-
-.m-1 {
-  margin: 1rem;
-}
-.m-2 {
-  margin: 2rem;
-}
-
-.my-1 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-.my-2 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-.my-3 {
-  margin-top: 3rem;
-  margin-bottom: 3rem;
-}
-.my-4 {
-  margin-top: 4rem;
-  margin-bottom: 4rem;
-}
-
-.mx-1 {
-  margin-left: 1rem;
-  margin-right: 1rem;
-}
-.mx-2 {
-  margin-left: 2rem;
-  margin-right: 2rem;
-}
-.mx-3 {
-  margin-left: 3rem;
-  margin-right: 3rem;
-}
-.mx-4 {
-  margin-left: 4rem;
-  margin-right: 4rem;
-}
-
-.p-1 {
-  padding: 1rem;
-}
-.p-2 {
-  padding: 2rem;
-}
-
-.text-center {
-  text-align: center;
-}
-.text-right {
-  text-align: right;
-}
-.text-left {
-  text-align: left;
-}
-.text-uppercase {
-  text-transform: uppercase;
-}
-.text-bold {
-  font-weight: 600;
-}
-.text-justify {
-  text-align: justify;
-}
-
-.fl_left {
-  float: left;
-}
-.fl_right {
-  float: right;
-}
-
-/* MENU*/
-
-.topnav {
-  background-color: #6b3194;
-
-  overflow: hidden;
-}
-
-.topnav a {
-  text-transform: uppercase;
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
-  width: 300px;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
 }
 
-.topnav a:hover {
+nav a:hover {
+  color: #ffffff;
   background-color: #844bad;
-  color: white;
 }
 
-.topnav a.active {
+nav li:hover{
+  background-color: #844bad;
+}
+
+ol,
+ul {
+  list-style: none;
+}
+
+.container {
+  width: 100%;
+  max-width: 970px;
+  margin: 0 auto;
+}
+
+/** Nav */
+
+.nav-menu {
   background-color: #6b3194;
-  color: white;
 }
 
-.topnav .icon {
-  display: none;
-}
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+.nav-menu ul {
+  text-align: center;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+.nav-menu li {
+  font-weight: 400;
+  font-size: 1.625rem;
+  display: inline-flex;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
+  padding: 1.25rem 1.875rem;
+  justify-content: space-around;
 }
 
+/* HERO **/
 
-
-.section1 {
-  height: 953px;
+.hero {
+  padding: 0.625rem 0;
+  text-align: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center bottom;
   background-image: url(../img/section1.png);
 }
 
+.hero img {
+  width: 70%;
+}
+
+.hero p {
+  color: #6b3194;
+  font-size: 2.625rem;
+  text-shadow: 0.25rem 0.25rem 0 #ffffff;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.hero-btn {
+  display: inline-block;
+  background-color: #6b3194;
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-size: 2.25rem;
+  padding: 1.3rem 1.875rem;
+  border-radius: 5rem;
+  margin: 1.875rem 0;
+  letter-spacing: 3.06px;
+}
+
+.hero-btn:hover {
+  border-radius: 5rem;
+  -webkit-border-radius: 5rem;
+  -moz-border-radius: 5rem;
+  -ms-border-radius: 5rem;
+  -o-border-radius: 5rem;
+  box-shadow: 0 1.25rem 5rem 1.25rem #6b319469;
+}
+
+/* Section2 */
+
 .section2 {
-  height: 928px;
+  color: #fff;
+  padding: 60px 0;
+  text-align: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
   background-image: url(../img/section2.png);
 }
 
+.section2 h2 {
+  margin: 1.875rem 0;
+
+  text-shadow: 0.25rem 0.25rem 0 #54197e;
+  font-size: 3.5rem;
+  font-weight: 400;
+  letter-spacing: 0.3rem;
+  text-transform: uppercase;
+}
+
+.section2 div > p {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 1.375rem;
+  font-weight: 400;
+  line-height: 2rem;
+}
+
+.section2 h3 {
+  font-size: 2rem;
+  text-transform: uppercase;
+  margin: 1.875rem 0;
+  text-shadow: 0.1875rem 0.1875rem 0 #54197e;
+  font-size: 1.875rem;
+  font-weight: 400;
+  letter-spacing: 0.15rem;
+}
+
+.section2 ul {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.section2 li {
+  width: 6.5rem;
+}
+
+.section2 li > p {
+  text-shadow: 0.1875rem 0.1875rem 0 #54197e;
+  color: #fff;
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 0.125rem;
+  text-transform: uppercase;
+}
+
+.section2 li > img {
+  width: 85%;
+}
+
+/* section3 */
+
 .section3 {
-  height: 862px;
+  color: #6b3194;
+  padding: 60px 0;
+  text-align: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
   background-image: url(../img/section3.png);
 }
-.section4 {
-  align-self: auto;
-  height: 953px;
-  background-image: url(../img/section4.png);
+
+.section3 > div {
+  padding: 5rem 0;
+}
+.section3 ul {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.full {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-}
-
-.logo {
-  position: relative;
-  left: 32%;
-  top: 3%;
-}
-.til {
+.section3 div > p {
   text-shadow: 4px 4px 0 #ffffff;
+  font-size: 3.5rem;
+  font-weight: 400;
+  letter-spacing: 0, 3125rem;
+  text-transform: uppercase;
+}
+
+.section3 li > p {
+  font-size: 1.5rem;
+  font-weight: 400;
+  letter-spacing: 0.125rem;
+  text-shadow: 0.125rem 0.125rem 0.25rem #ffffff;
+}
+
+/* section 4 */
+
+.section4 {
   color: #6b3194;
-  font-family: 'Alfa Slab One';
-  font-size: 42px;
-  font-weight: 400;
-  text-transform: uppercase;
-  position: relative;
-}
-
-.btn-ingresso {
-  padding: 1.3rem 4rem;
-  border-radius: 80px;
-  background-color: #6b3194;
-  color: #ffffff !important;
-  font-family: 'Alfa Slab One', sans-serif;
-  font-size: 2.25rem;
-  font-weight: 400;
-  letter-spacing: 3.06px;
-  text-transform: uppercase;
-}
-  .btn-ingresso:hover{
-    border-radius: 80px;
-    -webkit-border-radius: 80px;
-    -moz-border-radius: 80px;
-    -ms-border-radius: 80px;
-    -o-border-radius: 80px;
-    box-shadow: 0 20px 80px 20px #6b319469;
-}
-
-
-.sobre-til {
-  width: 792px;
-  height: 72px;
-  text-shadow: 4px 4px 0 #54197e;
-  color: #ffffff;
-  font-family: "Alfa Slab One";
-  font-size: 56px;
-  font-weight: 400;
-  letter-spacing: 4.76px;
-  text-transform: uppercase;
+  padding: 60px 0;
   text-align: center;
-  position: relative;
-  left: 26%;
-  top: 8%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
+  background-image: url(../img/fundo_apoio.png);
 }
 
-.sobre-text{
-  width: 745px;
-height: 178px;
-color: #ffffff;
-font-family: "Open Sans";
-font-size: 22px;
-font-weight: 400;
-line-height: 33.81px;
-position: relative;
-left: 27%;
-top: 10%
-}
-.sobre-til-2{
-
-  height: 72px;
-  text-shadow: 4px 4px 0 #54197e;
-  color: #ffffff;
-  font-family: "Alfa Slab One";
-  font-size: 56px;
+.section4 h2 {
+  color: #fff;
+  font-size: 3.5rem;
   font-weight: 400;
-  letter-spacing: 4.76px;
+  letter-spacing: 0.3125rem;
   text-transform: uppercase;
-
-}
-  
-.sobre-til-3{
- 
-height: 89px;
-text-shadow: 3px 3px 0 #54197e;
-color: #ffffff;
-font-family: "Alfa Slab One";
-font-size: 30px;
-font-weight: 400;
-letter-spacing: 2.55px;
-text-transform: uppercase;
+  text-shadow: 0.25rem 0.25rem 0 #612292;
 }
 
-
-.grow {
-  transition: all 0.2s ease-in-out;
-  
+.section4 div > div {
+  margin: 0 auto 0 auto;
 }
-.grow:hover {
-  transform: scale(1.1);
-}
-
-.farol-text{
-  width: 120px;
-height: 39px;
-text-shadow: 3px 3px 0 #54197e;
-color: #ffffff;
-font-family: "Alfa Slab One";
-font-size: 24px;
-font-weight: 400;
-letter-spacing: 2.04px;
-text-transform: uppercase;
-align-items: center;
-
-}
-
-.til-2{
-  width: 522px;
-height: 83px;
-text-shadow: 4px 4px 0 #ffffff;
-color: #6b3194;
-font-family: "Alfa Slab One";
-font-size: 56px;
-font-weight: 400;
-letter-spacing: 4.76px;
-text-transform: uppercase;
-}
-.til-3{
-width: 185px;
-height: 32px;
-text-shadow: 2px 2px 4px #ffffff;
-color: #6b3194;
-font-family: "Alfa Slab One";
-font-size: 24px;
-font-weight: 400;
-letter-spacing: 2.04px;
-text-transform: uppercase;}
-
-.space{
-  height: 90px;
-}
-.space2{
-  height: 120px;
-}
-
 
 .farol-img:hover{
   border-radius: 80px;
@@ -371,33 +264,4 @@ text-transform: uppercase;}
   -moz-border-radius: 60px;
   -ms-border-radius: 60px;
   -o-border-radius: 60px;
-}
-
-.til-4{
-
-
-text-shadow: 4px 4px 0 #612292;
-color: #ffffff;
-font-family: "Alfa Slab One";
-font-size: 56px;
-font-weight: 400;
-letter-spacing: 4.76px;
-text-transform: uppercase;}
-
-
-
-.apoio{
-  
- 
-  text-shadow: 2px 2px 0 #612292;
-  color: #ffffff;
-  font-family: "Alfa Slab One";
-  font-size: 24px;
-  font-weight: 400;
-  letter-spacing: 2.04px;
-  text-transform: uppercase;
-}
-
-.sympla-widget-626101{
-  
 }
