--- a/css/main.css
+++ b/css/main.css
@@ -41,7 +41,7 @@ nav a:hover {
   background-color: #844bad;
 }
 
-nav li:hover{
+nav li:hover {
   background-color: #844bad;
 }
 
@@ -92,6 +92,7 @@ ul {
 }
 
 .hero p {
+  padding: 1.5rem 0;
   color: #6b3194;
   font-size: 2.625rem;
   text-shadow: 0.25rem 0.25rem 0 #ffffff;
@@ -244,12 +245,11 @@ ul {
   margin: 0 auto 0 auto;
 }
 
-.farol-img:hover{
+.farol-img:hover {
   border-radius: 80px;
-  box-shadow: 0 20px 80px 20px #32FF32;
-  
+  box-shadow: 0 20px 80px 20px #32ff32;
 }
-.farol-img2:hover{
+.farol-img2:hover {
   border-radius: 60px;
   box-shadow: 0 20px 80px 20px #ccff33;
   -webkit-border-radius: 60px;
@@ -257,7 +257,7 @@ ul {
   -ms-border-radius: 60px;
   -o-border-radius: 60px;
 }
-.farol-img3:hover{
+.farol-img3:hover {
   border-radius: 60px;
   box-shadow: 0 20px 80px 20px red;
   -webkit-border-radius: 60px;
